Add datasource API documentation
